--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
+    "@types/express-ws": "^3.0.5",
     "express": "^5.1.0",
+    "express-ws": "^5.0.2",
+    "primevue": "^4.3.6",
+    "v-resize-observer": "^2.1.0",
     "vite-express": "^0.21.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
