--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,12 +6,15 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
+    "src/server/**/*",
+    "src/shared/**/*"
   ],
   "compilerOptions": {
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "composite": true,
+    "lib": ["ESNext.Promise", "ESNext"],
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
