--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,6 +15,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "composite": true,
     "lib": ["ESNext.Promise", "ESNext"],
+    "noUncheckedIndexedAccess": true,
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
